fix(style): markdown list items default text color in Dark Mode (#10790) (#10791)

--- a/src/style/_dark-mode.scss
+++ b/src/style/_dark-mode.scss
@@ -112,7 +112,8 @@ html.dark-mode {
     .markdown,
     .renderedMarkdown {
       p,
-      pre {
+      pre,
+      li {
         color: $neutral-20;
       }
 
